--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "nexmo": "^2.3.2"
   },
   "devDependencies": {},
   "keywords": [
